--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body style="background: url('bg3.jpg')">
 <head>
      <title>STARMAM</title>
+	<a href="indexDark.html"><button>DARK MODE</button></a> <!---DARK MODE---> 
 </head>	
 <!--------code for welcome massage start here-------------->
 <style>
