--- a/indexDark.html
+++ b/indexDark.html
@@ -12,7 +12,7 @@
     <body style="background: url('bg4.jpg')">
      <a style="font-size:5px;color:gold;" href="index.html"><button>DAY MODE</button></a> <!---DAY MODE--->
 <head>
-     <title>STARMAM</title>
+     <title>STARMAN</title>
 </head>
 <!--------code for welcome massage start here----->
 <style>
