--- a/indexDark.html
+++ b/indexDark.html
@@ -70,7 +70,7 @@
 </style>
 	
    <div class="example1">
-       <h3>WELCOME TO MY WEBPAGE </h3>
+       <h3> ENTIRELY BASED ON HTML </h3>
    </div>
 <!---------------------------------end this part of code----->
 
